# libdmg-hfsplus

./: .gitignore  CMakeLists.txt  README.markdown  README.md
common/: abstractfile.c
dmg/: CMakeLists.txt  abstractfile.c  base64.c  checksum.c  crc32.c  dmg.c  dmgfile.c  dmglib.c  io.c  partition.c  resources.c  udif.c
hdutil/: hdutil.c
includes/: abstractfile.h  common.h  dmg.h
includes/dmg/: dmg.h  dmgfile.h  dmglib.h
